fix: remove duplicated extension list between backend and Rust
